--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,14 @@ server:
 spring:
   datasource:
     hikari:
-      jdbc-url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-      username: sa
-      password:
-      driver-class-name: org.h2.Driver
+#      jdbc-url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#      username: sa
+#      password:
+#      driver-class-name: org.h2.Driver
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      jdbc-url: jdbc:mysql://localhost:9050/dev?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+      username: root
+      password: example
 
   jpa:
     hibernate:
